Postgres repo update due to Bitnami catalog changes

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -86,6 +86,8 @@ affinity: {}
 postgresql:
   enabled: true
   fullnameOverride: postgresql
+  image:
+    repository: bitnamilegacy/postgresql
   auth:
     postgresPassword: password
 
